kubernetes/app/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    spec:
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 200m
              memory: 300Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
